sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/Windrow_Data__c.object-meta.xml
<CustomObject>
    <label>Windrow Data</label>
    <nameField>
        <label>Windrow Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Windrow Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>