sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/fields/Avg_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Avg_Temperature__c</fullName>
    <formula>(IF(ISNULL(Temperature_Reading_1__c),0,Temperature_Reading_1__c) + IF(ISNULL(Temperature_Reading_2__c),0,Temperature_Reading_2__c) + IF(ISNULL(Temperature_Reading_3__c),0,Temperature_Reading_3__c))/
(IF(ISNULL(Temperature_Reading_1__c),0,1) + 
IF(ISNULL(Temperature_Reading_2__c),0,1)+
IF(ISNULL(Temperature_Reading_3__c),0,1))</formula>
    <label>Avg Temperature</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>