sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/fields/Mixed__c.field-meta.xml
<CustomField>
    <fullName>Mixed__c</fullName>
    <label>Mixed(Y/N)</label>
    <length>3</length>
    <type>Text</type>
</CustomField>