sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/fields/Moisture__c.field-meta.xml
<CustomField>
    <fullName>Moisture__c</fullName>
    <label>Moisture(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>