sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/fields/of_times_Mixed__c.field-meta.xml
<CustomField>
    <fullName>of_times_Mixed__c</fullName>
    <label># of times Mixed</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>