sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/fields/of_times_Watered__c.field-meta.xml
<CustomField>
    <fullName>of_times_Watered__c</fullName>
    <label># of times Watered</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>