sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/fields/Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>Reading_Date__c</fullName>
    <label>Reading Date</label>
    <type>Date</type>
</CustomField>