sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/fields/Temperature_Reading_1__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Reading_1__c</fullName>
    <label>Temperature Reading 1</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>