sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/fields/Water_ltrs__c.field-meta.xml
<CustomField>
    <fullName>Water_ltrs__c</fullName>
    <label>Water(ltrs)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>