sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/fields/Windrow__c.field-meta.xml
<CustomField>
    <fullName>Windrow__c</fullName>
    <label>Windrow</label>
    <referenceTo>Windrow__c</referenceTo>
    <relationshipLabel>Windrow Data</relationshipLabel>
    <relationshipName>Windrow_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>