sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/fields/Windrow_Reading__c.field-meta.xml
<CustomField>
    <fullName>Windrow_Reading__c</fullName>
    <label>Windrow Reading</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>