sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/recordTypes/Daily_Windrow_Data.recordType-meta.xml
<RecordType>
    <fullName>Daily_Windrow_Data</fullName>
    <active>true</active>
    <description>Temperature data</description>
    <label>Daily Windrow Data</label>
</RecordType>