sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/recordTypes/Weekly_Windrow_Data.recordType-meta.xml
<RecordType>
    <fullName>Weekly_Windrow_Data</fullName>
    <active>true</active>
    <label>Weekly Windrow Data</label>
</RecordType>