sfSandBoxCode/force-app/main/default/objects/Windrow_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Windrow__c</columns>
    <columns>Reading_Date__c</columns>
    <columns>Moisture__c</columns>
    <columns>Mixed__c</columns>
    <columns>Water_ltrs__c</columns>
    <columns>Temperature_Reading_1__c</columns>
    <columns>Temperature_Reading_2__c</columns>
    <columns>Temperature_Reading_3__c</columns>
    <columns>Temperature_Reading_4__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>